Make sure all alignment requirements are satisfied.

--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -23,7 +23,8 @@ body {
   /* Add padding around edge of modal. */
   padding: 10px;
   display: flex;
-  
+  /* Make sure icon class and  header-class are aligned horizontally */
+  justify-content: center;
 }
 
 .icon {
@@ -85,6 +86,8 @@ button.cancel {
   /* Add space between this class and text below it. */
   padding-bottom: 10px;
   display: flex;
+  /* Make sure title and close button are aligned horizontally. */
+  justify-content: center;
 }
 
 /* Class for setting up flex around divs with the header, close-button,
